src/objects/ArtistSettlementSupplement__c.object
<CustomObject>
    <description>During Settlement, represents expense Additions and Deductions that impact the settlement payment to the artist.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a valid artist deal for this event.</errorMessage>
            <filterItems>
                <field>Deal__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Artist Settlement Supplements</relationshipLabel>
        <relationshipName>ArtistSettlementSupplements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Artist Settlement Supplements</relationshipLabel>
        <relationshipName>ArtistSettlementSupplements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ExpenseType__c</fullName>
        <label>Expense Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fxAmount__c</fullName>
        <formula>(Amount__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Artist Settlement Supplement</label>
    <nameField>
        <displayFormat>Art-{000000}</displayFormat>
        <label>Artist Settlement Supplement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artist Settlement Supplements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;,
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;)
&amp;&amp; Event__c &lt;&gt; NULL
&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
</CustomObject>